CHORE: Final sets of changes from rubocop to imply style

--- a/.rubocop/style.yml
+++ b/.rubocop/style.yml
@@ -96,3 +96,9 @@ Style/SingleArgumentDig:
 
 Style/StringConcatenation:
   Enabled: true
+
+# samples and specs do this incorrectly :(
+Style/MixinUsage:
+  Exclude:
+    - spec/**/*
+    - samples/**/*
